Updated 'src/pages/careers.html' via CloudCannon

--- a/src/pages/careers.html
+++ b/src/pages/careers.html
@@ -7,16 +7,30 @@ description: >-
 image:
 permalink: /careers/
 roles:
-  - position: Technical Support Engineer
+  - position: Web Developer
     description: >-
-      If you love helping people with their Jekyll sites this is the role for
-      you. You will be supporting customers over email and live chat with Jekyll
-      and CloudCannon issues. Strong front end web and Jekyll experience is a
-      must.
-  - position: System Administrator
+      You will: Build sites using Jamstack, store source files in Git, write
+      HTML, CSS and JS to build immersive and functional websites. Attend
+      scoping meetings to provide support and technical expertise. Plan web
+      projects by breaking down projects into tasks and determining the internal
+      resources required to meet deadlines. Ensure websites are built to be
+      maintained by our clients using internal software. Test websites to ensure
+      they meet business requirements, is bug free and works consistently across
+      all target browsers. Iterate and improve our software development
+      methodologies for publishing websites for our services customers
+  - position: UX/UI Designer
     description: >-
-      Our ideal candidate breathes AWS and Docker, cares deeply about keeping
-      systems online and enjoys working on new infrastructure projects.
+      We are hiring a designer to help design websites for our enterprise
+      customers and to improve the UX of our web app. You will work with
+      experienced web developers to build beautiful user interfaces. Your role
+      will include:
+
+
+      - Creating reusable website designs in Sketch
+
+      - Work on a range of web design projects for fortune 500 companies
+
+      - UX design on our web app
 ---
 
 <div class="careers">
