Updated 'src/pages/careers.html' via CloudCannon

--- a/src/pages/careers.html
+++ b/src/pages/careers.html
@@ -9,14 +9,16 @@ permalink: /careers/
 roles:
   - position: Web Developer
     description: >-
-      You will: Build sites using Jamstack, store source files in Git, write
-      HTML, CSS and JS to build immersive and functional websites. Attend
-      scoping meetings to provide support and technical expertise. Plan web
-      projects by breaking down projects into tasks and determining the internal
-      resources required to meet deadlines. Ensure websites are built to be
-      maintained by our clients using internal software. Test websites to ensure
-      they meet business requirements, is bug free and works consistently across
-      all target browsers. Iterate and improve our software development
+      You will: 
+
+      Build sites using Jamstack, store source files in Git, write HTML, CSS and
+      JS to build immersive and functional websites. Attend scoping meetings to
+      provide support and technical expertise. Plan web projects by breaking
+      down projects into tasks and determining the internal resources required
+      to meet deadlines. Ensure websites are built to be maintained by our
+      clients using internal software. Test websites to ensure they meet
+      business requirements, is bug free and works consistently across all
+      target browsers. Iterate and improve our software development
       methodologies for publishing websites for our services customers
   - position: UX/UI Designer
     description: >-
