Updated 'src/pages/contact.html' via CloudCannon

--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -15,7 +15,7 @@ permalink: /contact/
 	<div class="wrapper">
 		<div class="contact-content">
 			<h2>Let's talk</h2>
-			<p>Have questions about CloudCannon Jekyll or anything else? Send us a message and we'll get back to you.</p>
+			<p>Have questions about CloudCannon, Jekyll or anything else? Send us a message and we'll get back to you.</p>
 			<p><a href="mailto:support@cloudcannon.com">support@cloudcannon.com</a></p>
 		</div>
 		<form action="/contact-success/" method="post" class="contact-form">
