Updated 'src/pages/about.html' via CloudCannon

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -109,7 +109,7 @@ investors:
 				{% endfor %}
 			</div>
 		</ul>
-		<p>We're a small, friendly, remote team who value lifestyle and self direction. We're passionate about evangelising static websites and working with others who do the same. If you think you'd be a good fit for a role with us, reach out.</p>
+		<p>We're a small and friendly team that values lifestyle and self direction. We're passionate about evangelising static websites and working with others who do the same. If you think you'd be a good fit for a role with us, reach out.</p>
 	</div>
 
 	<div class="offices wrapper">
