Updated 'src/pages/bug-bounty.html' via CloudCannon

--- a/src/pages/bug-bounty.html
+++ b/src/pages/bug-bounty.html
@@ -7,7 +7,7 @@ description: >-
 image:
 permalink: /bug-bounty/
 icons: true
-show_form: false
+show_form: true
 static_manifesto:
   - title: Check Scope
     icon: looks_one
