Updated 'src/pages/bug-bounty.html' via CloudCannon

--- a/src/pages/bug-bounty.html
+++ b/src/pages/bug-bounty.html
@@ -133,6 +133,7 @@ table_of_contents:
 					<p>While researching, we'd like to ask you to refrain from:</p>
 					<ul>
 						<li>Denial of service</li>
+						<li>Rate limiting</li>
 						<li>Spamming</li>
 						<li>Social engineering (including phishing) of CloudCannon staff or contractors</li>
 						<li>Any physical attempts against CloudCannon property or data centers</li>
